Salesforce CPQ/main/default/objects/QuoteLineConsumptionRate__c/fields/OriginalPrice__c.field-meta.xml
<CustomField>
    <fullName>OriginalPrice__c</fullName>
    <label>Original Price</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>