Salesforce CPQ/main/default/objects/QuoteLineConsumptionRate__c/fields/QuoteLineConsumptionSchedule__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineConsumptionSchedule__c</fullName>
    <inlineHelpText>This rate is a part of of this schedule.</inlineHelpText>
    <label>Quote Line Consumption Schedule</label>
    <referenceTo>QuoteLineConsumptionSchedule__c</referenceTo>
    <relationshipLabel>Quote Line Consumption Rates</relationshipLabel>
    <relationshipName>QuoteLineConsumptionRates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>